# Mashup-Man

./: .gitignore  CMakeLists.txt  README.md  config.toml
.github/workflows/: build.yaml
assets/fonts/: 1001fonts-delarge-eula.txt
assets/images/: maze-tiles.pixil
assets/levels/: 1.txt
assets/maps/: 1.txt
src/: action.h  application.cpp  application.h  astar_route.cpp  astar_route.h  astar_search.cpp  astar_search.h  background.cpp  background.h  bindings.cpp  bindings.h  command.h  configuration.cpp  configuration.h  direction.cpp  direction.h  game.cpp  game.h  layer.h  level.h  lifeboard.cpp  lifeboard.h  main.cpp  maze.cpp  maze.h  player.cpp  player.h  registries.cpp  registries.h  resources.cpp  resources.h  scene.cpp  scene.h  scoreboard.cpp  scoreboard.h  sound.cpp  sound.h  sprite.cpp  sprite.h  tile_map.cpp  (+6 more)
src/components/: destroy_tag.h  sound.h  sound_effect.h
src/entity/: animation.cpp  animation.h  brother.cpp  brother.h  brothers.cpp  brothers.h  character.cpp  character.h  enemy.cpp  enemy.h  entities.h  entity.cpp  entity.h  fireball.cpp  fireball.h  hero.cpp  hero.h  picker.cpp  picker.h  pickup.cpp  pickup.h  pipe.cpp  pipe.h  points.cpp  points.h  power_up.cpp  power_up.h  projectile.cpp  projectile.h
src/entity/super_mario/: enemy.cpp  enemy.h  entities.h  hero.cpp  hero.h  picker.cpp  picker.h  power_up.cpp  power_up.h  projectile.cpp  projectile.h
src/services/: astar_pathfinding.cpp  astar_pathfinding.h  services.cpp  services.h  sound_player.cpp  sound_player.h
src/state/: character_select.cpp  character_select.h  game.cpp  game.h  game_over.cpp  game_over.h  id.h  level_complete.cpp  level_complete.h  pause.cpp  pause.h  stack.cpp  stack.h  state.cpp  state.h  states.h  title.cpp  title.h
src/systems/: destroy_tagged.cpp  destroy_tagged.h  play_sound_effects.cpp  play_sound_effects.h  tag_destroy_stopped_sounds.cpp  tag_destroy_stopped_sounds.h
